# RobotS

./: .gitignore  .travis.yml  Cargo.toml  README.md  design_doc.md  index.html  roadmap.md  search-index.js
aho_corasick/: struct.Matches.html  struct.MatchesOverlapping.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html
benches/: bench.rs
env_logger/: fn.init.html  index.html  struct.LogBuilder.html  struct.Logger.html
examples/: ask.rs  counter.rs  distant.rs  factorial.rs  hello.rs  panic.rs
kernel32/: index.html
log/: enum.LogLevel.html  enum.LogLevelFilter.html  struct.LogLocation.html  struct.LogMetadata.html  struct.SetLoggerError.html  struct.ShutdownLoggerError.html
memchr/: fn.memchr.html  fn.memchr2.html  fn.memchr3.html  fn.memrchr.html  index.html
regex/: enum.Error.html  fn.is_match.html  fn.quote.html  index.html  struct.CaptureNames.html  struct.Captures.html  struct.FindCaptures.html  struct.FindMatches.html  struct.NoExpand.html  struct.Regex.html  struct.RegexBuilder.html  struct.RegexSet.html  struct.RegexSplits.html  struct.RegexSplitsN.html  struct.SetMatches.html  struct.SetMatchesIntoIter.html  struct.SetMatchesIter.html  struct.SubCaptures.html  struct.SubCapturesNamed.html  struct.SubCapturesPos.html  trait.Replacer.html
regex_syntax/: enum.ErrorKind.html  enum.Expr.html  enum.Repeater.html  fn.quote.html  index.html  struct.ByteClass.html  struct.ByteRange.html  struct.CharClass.html  struct.ClassRange.html  struct.Error.html  type.Result.html
robots/: index.html  sidebar-items.js
src/: actor_cell.rs  ask.rs  (+9 more)
(+153 files in other folders)
