[package]
name = "RobotS"
version = "0.1.0"
authors = ["Felix Raimundo <gamaz3ps@gmail.com>"]
documentation = "http://gamazeps.github.io/RobotS/"

[features]
default = []
dev = ["clippy"]

[dependencies]
clippy = {version = "*", optional = true}
rand = "0.3.0"

[dependencies.eventual]
git = "https://github.com/carllerche/eventual"

[lib]
name = "robots"
path = "src/lib.rs"

[[test]]
name = "test"
path = "test/test.rs"

[[bench]]
name = "bench"
path = "test/bench.rs"
